# fastapi_learn

./: New Text Document.txt  database.py  db.sqlite3  main.py  main_json.py  models.py  pyproject.toml  requirements.txt
data/: books.json
