[tool.poetry]
name = "fastapi-learn"
version = "0.1.0"
description = ""
authors = ["raphavtorres <raphaeltorreprofissional@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
